Add experimental extract API
