# internal/server/server.go
@@ -70,12 +70,19 @@ func StartRouter() error {
 	router.GET("/v1/arch/:arch_id/singer/:singer_id/avatar", GetArchSingerAvatar)
 	router.GET("/v1/arch/:arch_id/singer/:singer_id/background", GetArchSingerBackground)
 	router.GET("/v1/arch/:arch_id/singer/:singer_id/demo_audio", GetArchSingerDemoAudioList)
+	router.GET("/v1/extractor", GetExtractorList)
+	router.GET("/v1/extractor/note/:extractor_id", GetNoteExtractor)
+	router.GET("/v1/extractor/tempo/:extractor_id", GetTempoExtractor)
+	router.GET("/v1/extractor/pitch/:extractor_id", GetPitchExtractor)
 	router.POST("/v1/env_tag", PostEnvTag)
 	router.POST("/v1/synth/pronunciation", PostPronunciation)
 	router.POST("/v1/synth/phoneme", PostPhoneme)
 	router.POST("/v1/synth/duration", PostDuration)
 	router.POST("/v1/synth/parameter", PostParameter)
 	router.POST("/v1/synth/audio", PostAudio)
+	router.POST("/v1/extract/note", PostExtractNote)
+	router.POST("/v1/extract/tempo", PostExtractTempo)
+	router.POST("/v1/extract/pitch", PostExtractPitch)
 
 	host := viper.GetString("host")
 	port := viper.GetInt("port")
